# TI2014

./: .gitignore  README
TP1/: README  binarySearch.m  bs.m  createHist.m  createHistOld.m  entropia.m  ex3.m  ex4.m  ex5.m  ex6a.m  ex6b.m  ex6c.m  ex6mminf.m  getpairs.m  hist.m  mutualInf.m  report.tex  roundToNearest.m  slidingWindow.m  test.m  trueEntropy.m
TP1/dados/: README
TP1/report/: report.tex
TP2/: CMakeLists.txt  GIFencoder.c  GIFencoder.cpp  GIFencoder.h  GIFmain.c  GIFmain.cpp  README  README.md  build.sh
TP2/include/: GIFencoder.h  GIFencoder.hpp  GIFmain.h
TP2/src/: GIFencoder.cpp  GIFmain.cpp  stb_image.c
TP3/: CMakeLists.txt  DES.c  DES.h  Makefile  README.TXT  README.md  clean.sh  main.c
TP3/Code/: DES.c  DES.h  makefile
